--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,23 @@
 ---
 ---
 
+@article{chen2023explain,
+  abbr={Workshop},
+  bibtex_show={true},
+  title={Explaining Predictive Uncertainty by Looking Back at Model Explanations},
+  abstract={Predictive uncertainty estimation of pre-trained language models is an important measure of how likely people can trust their predictions. However, little is known about what makes a model prediction uncertain. Explaining predictive uncertainty is an important complement to explaining prediction labels in helping users understand model decision making and gaining their trust on model predictions, while has been largely ignored in prior works. In this work, we propose to explain the predictive uncertainty of pre-trained language models by extracting uncertain words from existing model explanations. We find the uncertain words are those identified as making negative contributions to prediction labels, while actually explaining the predictive uncertainty. Experiments show that uncertainty explanations are indispensable to explaining models and helping humans understand model prediction behavior.},
+  author={Chen, Hanjie and Du, Wanyu and Ji, Yangfeng},
+  journal={AAAI Workshop on Uncertainty Reasoning and Quantification in Decision Making},
+  year={2023},
+  month={Feb},
+  publisher={AAAI},
+  url={https://arxiv.org/abs/2201.03742},
+  html={https://arxiv.org/abs/2201.03742}
+}
+
+
 @article{du-etal-2022-sa2,
-  abbr={Findings},
+  abbr={EMNLP},
   bibtex_show={true},
   title={Self-training with Two-phase Self-augmentation for Few-shot Dialogue Generation},
   author={Du, Wanyu and Chen, Hanjie and Ji, Yangfeng},
@@ -37,8 +52,8 @@
   journal={Proceedings of the 2022 Conference on Empirical Methods in Natural Language Processing (EMNLP 2022)},
   year={2022},
   month={Dec},
-  url={https://aclanthology.org/},
-  html={https://aclanthology.org/},
+  url={https://arxiv.org/abs/2212.01350},
+  html={https://arxiv.org/abs/2212.01350},
   publisher={Association for Computational Linguistics},
   abstract ={Iterative text revision improves text quality by fixing grammatical errors, rephrasing for better readability or contextual appropriateness, or reorganizing sentence structures throughout a document. Most recent research has focused on understanding and classifying different types of edits in the iterative revision process from human-written text instead of building accurate and robust systems for iterative text revision. In this work, we aim to build an end-to-end text revision system that can iteratively generate helpful edits by explicitly detecting editable spans (where-to-edit) with their corresponding edit intents and then instructing a revision model to revise the detected edit spans. Leveraging datasets from other related text editing NLP tasks, combined with the specification of editable spans, leads our system to more accurately model the process of iterative text refinement, as evidenced by empirical results and human evaluations. Our system significantly outperforms previous baselines on our text revision tasks and other standard text revision tasks, including grammatical error correction, text simplification, sentence fusion, and style transfer. Through extensive qualitative and quantitative analysis, we make vital connections between edit intentions and writing quality, and better computational modeling of iterative text revisions.},
 }
@@ -95,7 +110,7 @@
 
 
 @article{du-ji-2021-sidecontrol-controlled,
-  abbr={Findings},
+  abbr={EMNLP},
   bibtex_show={true},
   title={{S}ide{C}ontrol: Controlled Open-domain Dialogue Generation via Additive Side Networks},
   author={Du, Wanyu and Ji, Yangfeng},
