--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,20 @@
 ---
 ---
 
+@article{du2023blending,
+  abbr={Preprint},
+  bibtex_show={true},
+  title={Blending Reward Functions via Few Expert Demonstrations for Faithful and Accurate Knowledge-Grounded Dialogue Generation},
+  abstract={Predictive uncertainty estimation of pre-trained language models is an important measure of how likely people can trust their predictions. However, little is known about what makes a model prediction uncertain. Explaining predictive uncertainty is an important complement to explaining prediction labels in helping users understand model decision making and gaining their trust on model predictions, while has been largely ignored in prior works. In this work, we propose to explain the predictive uncertainty of pre-trained language models by extracting uncertain words from existing model explanations. We find the uncertain words are those identified as making negative contributions to prediction labels, while actually explaining the predictive uncertainty. Experiments show that uncertainty explanations are indispensable to explaining models and helping humans understand model prediction behavior.},
+  author={Du, Wanyu and Ji, Yangfeng},
+  journal={arXiv preprint},
+  year={2023},
+  month={Nov},
+  publisher={arXiv},
+  url={https://arxiv.org/abs/2311.00953},
+  html={https://arxiv.org/abs/2311.00953}
+}
+
 @article{chen2023explain,
   abbr={Workshop},
   bibtex_show={true},
@@ -26,8 +40,8 @@
   year={2022},
   month={Dec},
   publisher={Association for Computational Linguistics},
-  url={https://arxiv.org/abs/2205.09661},
-  html={https://arxiv.org/abs/2205.09661}
+  url={https://aclanthology.org/2022.findings-emnlp.201},
+  html={https://aclanthology.org/2022.findings-emnlp.201}
 }
 
 @article{zhao-etal-2022-floweval,
@@ -39,8 +53,8 @@
   year={2022},
   month={Dec},
   publisher={Association for Computational Linguistics},
-  url={https://arxiv.org/abs/2202.06633},
-  html={https://arxiv.org/abs/2202.06633},
+  url={https://aclanthology.org/2022.emnlp-main.715},
+  html={https://aclanthology.org/2022.emnlp-main.715},
   abstract={Despite recent progress in open-domain dialogue evaluation, how to develop automatic metrics remains an open problem. We explore the potential of dialogue evaluation featuring dialog act information, which was hardly explicitly modeled in previous methods. However, defined at the utterance level in general, dialog act is of coarse granularity, as an utterance can contain multiple segments possessing different functions. Hence, we propose segment act, an extension of dialog act from utterance level to segment level, and crowdsource a large-scale dataset for it. To utilize segment act flows, sequences of segment acts, for evaluation, we develop the first consensus-based dialogue evaluation framework, FlowEval. This framework provides a reference-free approach for dialog evaluation by finding pseudo-references. Extensive experiments against strong baselines on three benchmark datasets demonstrate the effectiveness and other desirable characteristics of our FlowEval, pointing out a potential path for better dialogue evaluation.}
 }
 
@@ -52,8 +66,8 @@
   journal={Proceedings of the 2022 Conference on Empirical Methods in Natural Language Processing (EMNLP 2022)},
   year={2022},
   month={Dec},
-  url={https://arxiv.org/abs/2212.01350},
-  html={https://arxiv.org/abs/2212.01350},
+  url={https://aclanthology.org/2022.emnlp-main.678},
+  html={https://aclanthology.org/2022.emnlp-main.678},
   publisher={Association for Computational Linguistics},
   abstract ={Iterative text revision improves text quality by fixing grammatical errors, rephrasing for better readability or contextual appropriateness, or reorganizing sentence structures throughout a document. Most recent research has focused on understanding and classifying different types of edits in the iterative revision process from human-written text instead of building accurate and robust systems for iterative text revision. In this work, we aim to build an end-to-end text revision system that can iteratively generate helpful edits by explicitly detecting editable spans (where-to-edit) with their corresponding edit intents and then instructing a revision model to revise the detected edit spans. Leveraging datasets from other related text editing NLP tasks, combined with the specification of editable spans, leads our system to more accurately model the process of iterative text refinement, as evidenced by empirical results and human evaluations. Our system significantly outperforms previous baselines on our text revision tasks and other standard text revision tasks, including grammatical error correction, text simplification, sentence fusion, and style transfer. Through extensive qualitative and quantitative analysis, we make vital connections between edit intentions and writing quality, and better computational modeling of iterative text revisions.},
 }
