--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,8 +39,7 @@
   publisher={Association for Computational Linguistics},
   url={https://aclanthology.org/2022.findings-emnlp.201},
   pdf={https://aclanthology.org/2022.findings-emnlp.201.pdf},
-  code={https://github.com/wyu-du/Self-Training-Dialogue-Generation},
-  selected={true}
+  code={https://github.com/wyu-du/Self-Training-Dialogue-Generation}
 }
 
 @article{zhao-etal-2022-floweval,
