--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,7 +39,8 @@
   publisher={Association for Computational Linguistics},
   url={https://aclanthology.org/2022.findings-emnlp.201},
   pdf={https://aclanthology.org/2022.findings-emnlp.201.pdf},
-  code={https://github.com/wyu-du/Self-Training-Dialogue-Generation}
+  code={https://github.com/wyu-du/Self-Training-Dialogue-Generation},
+  selected={true}
 }
 
 @article{zhao-etal-2022-floweval,
