--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,19 @@
 ---
 ---
 
+@article{du2024thesis,
+  abbr={Thesis},
+  title={Towards Controllable and Data-Efficient Natural Language Generation},
+  abstract={Large Language Models (LLMs) have revolutionized artificial intelligence (AI) applications by significantly simplifying users' efforts to provide detailed and task-specific instructions to AI systems. The adoption of transformer architecture has notably enhanced LLMs' ability to learn intricate linguistic patterns and world knowledge from extensive text datasets. Moreover, the large-scale pre-training on multiple natural language processing (NLP) tasks enables LLMs to address a wide range of NLP challenges with improved performance and efficiency. While LLMs excel in natural language understanding, they still face undeniable challenges in natural language generation (NLG). These challenges include generating undesired outputs (e.g., factually incorrect, harmful, biased contents), difficulty in adapting to low-resource domain-specific tasks, and misalignment with user intentions. To address the above challenges, this dissertation introduces methods to refine the generative capabilities of LLMs through controllable and data-efficient natural language generation techniques. The goal is to improve the alignment of generated content with user intentions using controllable and data-efficient LLMs. We design three major components to achieve the goal: (1) user intention identification to align models with human preferences; (2) controllable LLMs to produce outputs that meet specific user requirements; (3) data-efficient NLG to enhance LLM adaptability to low-resource domain-specific tasks. In summary, this dissertation provides a framework to understand user intentions and develop controllable generation methods to align LLMs with these intentions. At the end of the dissertation, an interactive text generation application is presented to demonstrate the benefits of leveraging user intentions and controllable LLMs for human-AI collaborative text generation.},
+  author={Du, Wanyu},
+  journal={University of Virginia},
+  year={2024},
+  month={Apr},
+  publisher={University of Virginia},
+  url={https://libraetd.lib.virginia.edu/public_view/02870x38f},
+  pdf={https://libraetd.lib.virginia.edu/public_view/02870x38f}
+}
+
 @article{du2023blending,
   abbr={Preprint},
   title={Blending Reward Functions via Few Expert Demonstrations for Faithful and Accurate Knowledge-Grounded Dialogue Generation},
